services/frontend-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    tier: frontend
spec:
  type:  ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 9090
